--- a/index.html
+++ b/index.html
@@ -2,39 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Malik - Jazz sur la plage</title>
-	
-	<style>
-
-	/* Typo */
-	@import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-	html{
-		font-family: "Public Sans", sans-serif;
-	}
-	h1{
-		font-size: 10vw;
-	}
-	/* Couleur */
-	body{
-		background: linear-gradient(in oklch,rgb(226, 92, 114), rgb(3, 157, 3));
-		color: white;
-	}	
-	/* Mise en page */
-	body{
-		min-height: 100vh;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-	}
-	</style>
-
-
-
+	<meta name="viewport" content="width=, initial-scale=1.0">
+	<title>Document</title>
 </head>
+<link rel="stylesheet" href="Style.css">
 <body>
-	<h1>Jazz sur la plage</h1>
-	
+	<h1>
+		Jazz sur la plage
+	</h1>
 </body>
 </html>
