image et couleur

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <link rel="stylesheet" href="Style.css">
 <body>
-	<h1>
-		Jazz sur la plage
-	</h1>
+	<img id="Affiche" src="Affiche.svg" alt="">
+	<h1>Jazz sur la plage</h1>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quis modi illum nobis distinctio maxime autem consequatur est quae totam laborum ea doloremque repudiandae quia, minus repellat fuga. Earum, quod?</p>
+
+	<p class="base">font-size: base = 16px</p>
+	<p class="xxxl">font-size: xxxl = ×5</p>
 </body>
 </html>
